Completed Trades Section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -405,7 +405,7 @@ header .intro-text {
 .testimonial-content p {
 	margin-bottom: 0;
 	font-size: 14px;
-	font-style: italic;
+	font-style: sans-serif;
 }
 .testimonial-meta {
 	margin-top: 10px;
